Azure/Azure-Pipelines/pipelines/k8s/availabilityapi/manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: availabilityapi
  namespace: catalog-integration-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: availability.catalog-integration.dev.10-186-28-100.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: availabilityapi
            port:
              number: 80
